0025757: distmini returns wrong solution for ellipse/vertex

Analytical handling of degenerated cases added.

Test case for issue CR25757

Correction of test case for issue CR25757